added proxy support

--- a/KMB_ImageComparison/App.config
+++ b/KMB_ImageComparison/App.config
@@ -27,4 +27,10 @@
                 name="Mtom1" />
         </client>
     </system.serviceModel>
+  <system.net>
+    <defaultProxy enabled="true">
+      <proxy proxyaddress="http://[proxy address]:[proxy port]" 
+             bypassonlocal="false"/>
+    </defaultProxy>
+  </system.net>
 </configuration>
