--- a/KMB_ImageComparison/KMB_ImageComparison.csproj
+++ b/KMB_ImageComparison/KMB_ImageComparison.csproj
@@ -48,6 +48,7 @@
       <HintPath>..\packages\Shipwreck.Phash.PresentationCore.0.2.0\lib\net452\Shipwreck.Phash.PresentationCore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
