--- a/KMB_ImageComparison/App.config
+++ b/KMB_ImageComparison/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <!-- PROVIDE PROXY CREDENTIALS/ADDRESS HERE! -->
-    <add key="user" value="[user]"/>
-    <add key="password" value="[password]"/>
-    <add key="address" value="http://[proxyaddress]:[port]"/>
+    <add key="user" value="[user]" />
+    <add key="password" value="[password]" />
+    <add key="address" value="http://[proxyaddress]:[port]" />
     <!-- PROVIDE PROXY CREDENTIALS/ADDRESS HERE! -->
   </appSettings>
     <startup> 
@@ -20,18 +20,18 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://facade-ch02.picturepark.com/ExtendedPublicService.svc"
-                binding="basicHttpBinding" bindingConfiguration="Default"
-                contract="PP_SOAP_Service.IExtendedPublicService" name="Default" />
-            <endpoint address="http://facade-ch02.picturepark.com/ExtendedPublicService.svc/Mtom"
-                binding="basicHttpBinding" bindingConfiguration="Mtom" contract="PP_SOAP_Service.IExtendedPublicService"
-                name="Mtom" />
-            <endpoint address="http://facade-ch02.picturepark.com/ExtendedPublicService.svc"
-                binding="basicHttpBinding" bindingConfiguration="Default1"
-                contract="PP_SOAP_Service.IExtendedPublicService" name="Default1" />
-            <endpoint address="http://facade-ch02.picturepark.com/ExtendedPublicService.svc/Mtom"
-                binding="basicHttpBinding" bindingConfiguration="Mtom1" contract="PP_SOAP_Service.IExtendedPublicService"
-                name="Mtom1" />
+            <endpoint address="http://facade-ch02.picturepark.com/ExtendedPublicService.svc" binding="basicHttpBinding" bindingConfiguration="Default" contract="PP_SOAP_Service.IExtendedPublicService" name="Default" />
+            <endpoint address="http://facade-ch02.picturepark.com/ExtendedPublicService.svc/Mtom" binding="basicHttpBinding" bindingConfiguration="Mtom" contract="PP_SOAP_Service.IExtendedPublicService" name="Mtom" />
+            <endpoint address="http://facade-ch02.picturepark.com/ExtendedPublicService.svc" binding="basicHttpBinding" bindingConfiguration="Default1" contract="PP_SOAP_Service.IExtendedPublicService" name="Default1" />
+            <endpoint address="http://facade-ch02.picturepark.com/ExtendedPublicService.svc/Mtom" binding="basicHttpBinding" bindingConfiguration="Mtom1" contract="PP_SOAP_Service.IExtendedPublicService" name="Mtom1" />
         </client>
     </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="ZedGraph" publicKeyToken="02a83cbd123fcd60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.7.430" newVersion="5.1.7.430" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
